--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -17,3 +17,38 @@ body {
     color: var(--txt);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
+nav {
+    background-color: #333;
+    padding: 1rem 0;
+    border-bottom: 1px solid var(--yellow);
+    margin-bottom: 10px;
+
+    ul {
+        list-style: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        margin: 0;
+
+        li {
+            margin: 0 15px;
+
+            a {
+                color: var(--txt);
+                text-decoration: none;
+                font-size: 1.1rem;
+                padding: 5px 10px;
+                border-radius: 5px;
+                transition: background-color 0.3s, color 0.3s;
+
+                &:hover,
+                &.active {
+                    color: var(--back);
+                    background-color: var(--yellow);
+                }
+            }
+        }
+    }
+}
