--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -23,6 +23,7 @@ nav {
     padding: 1rem 0;
     border-bottom: 1px solid var(--yellow);
     margin-bottom: 10px;
+    position: relative;
 
     ul {
         list-style: none;
@@ -50,5 +51,14 @@ nav {
                 }
             }
         }
+    }
+
+    div {
+        position: absolute;
+        top: 0;
+        left: 10px;
+        height: 100%;
+        display: flex;
+        align-items: center;
     }
 }
