--- a/front/src/pages/admin.scss
+++ b/front/src/pages/admin.scss
@@ -6,7 +6,7 @@
 summary {
     text-align: center;
     margin-bottom: 1rem;
-    color: var(--yellow);
+    color: var(--accent);
     cursor: pointer;
 }
 
