--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -61,5 +61,9 @@ nav {
         height: 100%;
         display: flex;
         align-items: center;
+
+        span {
+            cursor: pointer;
+        }
     }
 }
