--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -77,8 +77,10 @@ nav {
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1000px) {
     nav {
+        z-index: 1000;
+
         p {
             display: block;
         }
