--- a/front/src/pages/admin.scss
+++ b/front/src/pages/admin.scss
@@ -18,17 +18,16 @@ summary {
     display: none;
 }
 
-section {
-    display: flex;
-    justify-content: center;
+#search-container {
     margin-bottom: 10px;
-
-    label {
-        width: 600px;
-    }
+    width: 900px;
+    margin-inline: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     #search {
-        width: 100%;
+        width: 600px;
         padding: 0.5rem;
         margin-bottom: 1rem;
         border: 1px solid #ccc;
@@ -37,9 +36,22 @@ section {
         background-color: var(--background);
         color: var(--text-color);
     }
+
+    #search-clear {
+        padding: 0.5rem 1rem;
+        background-color: red;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+
+        &:hover {
+            background-color: var(--accent2);
+        }
+    }
 }
 
-aside {
+#mail-notification {
     position: absolute;
     top: 70px;
     right: 10;
@@ -60,4 +72,37 @@ aside {
         }
     }
 
+}
+
+#software-notification {
+    position: fixed;
+    bottom: 60px;
+    left: 10px;
+
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #8b0bec;
+    background-color: #222;
+    color: var(--txt);
+}
+
+#toggle-software-notification {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    background: none;
+    border: none;
+    font-size: 1.3rem;
+    cursor: pointer;
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &:hover {
+        background-color: #444;
+        border-radius: 10px;
+    }
 }
