--- a/front/src/pages/upload.scss
+++ b/front/src/pages/upload.scss
@@ -84,7 +84,7 @@ form {
         }
     }
 
-    button {
+    button[type="submit"] {
         padding: 1rem;
         background: linear-gradient(45deg, var(--accent), var(--accent2));
         color: white;
@@ -94,7 +94,6 @@ form {
         font-weight: bold;
         cursor: pointer;
         transition: all 0.3s ease;
-        margin-top: 1rem;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
         &:hover {
@@ -115,4 +114,47 @@ form {
     margin-top: 1rem;
     min-height: 1.2em;
     font-weight: 600;
+}
+
+#filesList {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        padding: 8px;
+        margin: 5px 0;
+        background-color: var(--back);
+        border-radius: 4px;
+        border: 1px solid var(--accent);
+    }
+
+    span {
+        flex-grow: 1;
+        word-break: break-all;
+        padding-right: 10px;
+        color: white;
+    }
+
+    button {
+        background-color: #e74c3c;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 25px;
+        height: 25px;
+        cursor: pointer;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            background-color: var(--accent);
+        }
+    }
 }
