--- a/front/src/style.scss
+++ b/front/src/style.scss
@@ -77,6 +77,14 @@ nav {
     }
 }
 
+footer {
+    text-align: center;
+    padding: 20px;
+    margin-top: 20px;
+    color: var(--txt);
+    font-size: 0.9rem;
+}
+
 #popup-container {
     .popup {
         text-align: center;
