--- a/front/src/pages/admin.scss
+++ b/front/src/pages/admin.scss
@@ -55,7 +55,7 @@ summary {
 #mail-notification {
     position: absolute;
     top: 70px;
-    right: 10;
+    left: 10px;
     padding: 5px;
     border-radius: 5px;
     background-color: #222;
