--- a/front/src/pages/upload.scss
+++ b/front/src/pages/upload.scss
@@ -35,7 +35,8 @@ form {
     }
 
     input[type="text"],
-    textarea {
+    textarea,
+    select {
         padding: 1rem;
         border: 1px solid #555;
         background-color: #2c2c2c;
